Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -204,7 +204,7 @@
         position: static;
         height: 35vh;
         transform: none;
-        margin-top: 30px;
+        margin-top: 25px;
     }
     .truck > div {
         position: static;
